# teleop_mg400_ws

./: .gitignore  README.md  start_teleop.sh
config/: ros_interface.json
docs/: MG400_VR_Teleop_Documentation.docx  MG400_VR_Teleop_Documentation.md  dobot_commands.json
src/mg400_bringup/launch/: display.launch.py  rsp.launch.py
src/mg400_bringup/rviz/: mg400.rviz
src/mg400_description/urdf/: mg400.xacro
src/mg400_engine/mg400_common/: package.xml
src/mg400_engine/mg400_interface/: README.md  package.xml
src/mg400_engine/mg400_msgs/: package.xml
src/mg400_engine/mg400_node/: CMakeLists.txt  README.md  package.xml
src/mg400_engine/mg400_node/include/mg400_node/: mg400_node.hpp
src/mg400_engine/mg400_plugin/: dashboard_api_plugins.xml  package.xml
src/teleop_logic/: package.xml  setup.cfg  setup.py
src/teleop_logic/launch/: teleop_all.launch.py
src/teleop_logic/teleop_logic/: monitor_gui.py  teleop_node.py
src/teleop_logic/teleop_logic/config/: motion_config.py  network_config.py  robot_config.py
src/teleop_logic/teleop_logic/core/: command_sender.py  feedback_handler.py  robot_connection.py
src/teleop_logic/teleop_logic/logic/: experimental_logic.py  joint_validator.py  motion_planner.py  safety_monitor.py  target_predictor.py  teleop_controller.py
src/teleop_logic/teleop_logic/structs/: dobot_structs.py
src/teleop_logic/teleop_logic/trajectory/: __init__.py  trajectory_recorder.py
src/teleop_logic/teleop_logic/utils/: clock_calibrator.py  collision_haptic.py  error_decoder.py  error_handler.py  interactive_cmd.py  kinematics.py  latency_analyzer.py  teleop_logger.py
src/unity_bridge/ros_tcp_endpoint/: publisher.py
tools/: mock_frontend.py
tools/mg400_simulator/: README.md  main.py  requirements.txt  run.sh
tools/mg400_simulator/core/: mg400_kinematics.py  ros_bridge.py  teach_manager.py  (+2 more)
(+19 files in other folders)
